--- a/to-do_list/src/app/app.component.html
+++ b/to-do_list/src/app/app.component.html
@@ -4,15 +4,28 @@
 <body>
 
 <div ng-app="">
+    <div class="container-fluid">
+        <div class="row bg-success justify-content-center align-items-center" style="height: 80px">
+            
+        </div>
+        <div class="col-3"></div>
+        <div class="col-6 text-light h2">
+            Todo-App
+        </div>
+    </div>
+    
+    <div class="row mt-1" style = "height: 80px;">
+        <div class="col-3 d-none col-md-3 d-md-block"></div>
+    </div>"
+
+    <div class="col-12 col-md-6 bg-success d-flex
+ justify-content-center align-items-center text-light h3">
+
+ <input [(ngModel)]="newTask" type="text" value="" class="col-7 form-control" style="width:300px;">
+</div>>
+        
+
  
-<p>My To-Do App</p>
-<div>
-<p>Task: <input type="text" ng-model="name"></p>
-<p ng-bind="name"></p>
-
-</div>
-
-
 
 </div>
 
