--- a/to-do_list/src/app/app.component.html
+++ b/to-do_list/src/app/app.component.html
@@ -22,6 +22,9 @@
  justify-content-center align-items-center text-light h3">
 
  <input [(ngModel)]="newTask" type="text" value="" class="col-7 form-control" style="width:300px;">
+
+ <div class="col-1"></div>
+ 
 </div>>
         
 
