to do components

--- a/to-do_list/src/app/navbar/navbar.component.html
+++ b/to-do_list/src/app/navbar/navbar.component.html
@@ -9,9 +9,9 @@
     </div>
     <div class="nav-items">
         <ul class="flex pt-10 gap-[20px] justify-end m-10">
-            <li class="text-xl font-bold text-slate-800">Home</li>
-            <li class="text-xl font-bold text-slate-800">About</li>
-            <li class="text-xl font-bold text-slate-800">Contact</li>
+            <li class="text-xl font-bold text-slate-800 cursor-pointer" routerLink="#">Home</li>
+            <li class="text-xl font-bold text-slate-800 cursor-pointer" routerLink="#">About</li>
+            <li class="text-xl font-bold text-slate-800 cursor-pointer" routerLink="#">Contact</li>
         </ul>
     </div>
     <div class="search">
