to do container

--- a/to-do_list/src/app/to-do/to-do.component.html
+++ b/to-do_list/src/app/to-do/to-do.component.html
@@ -1,1 +1,13 @@
-<p>to-do works!</p>
+
+
+
+<!-- //this is the todo component -->
+
+<div class="container bg-inherit border-blue-700 h-[300px]">
+  <div class="head-text underline 2xl">
+    <h3>Your To Do List</h3>
+  </div>
+  <div class="content">
+
+  </div>
+</div>
